{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 22,
  "lineage": "9ba9eb8e-c725-8910-8089-e3361c19e5b6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c55b159cbfafe1f0",
            "arn": "arn:aws:ec2:us-east-1::instance/i-a4693c90483fd8ced",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-a4693c90483fd8ced",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-c847aba2b80a88f61",
            "private_dns": "ip-10-152-84-33.ec2.internal",
            "private_ip": "10.152.84.33",
            "public_dns": "ec2-54-214-132-218.compute-1.amazonaws.com",
            "public_ip": "54.214.132.218",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-9e13a36100ac24838",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e6e12e6deeac8a5a0",
            "tags": {
              "Name": "mon-instance-ec2"
            },
            "tags_all": {
              "Name": "mon-instance-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-12345678",
            "arn": "arn:aws:ec2:us-east-1::instance/i-15e55f196e0a3c2af",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-15e55f196e0a3c2af",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "deployer-key",
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-7517aed4e02fe4f4e",
            "private_dns": "ip-10-2-202-124.ec2.internal",
            "private_ip": "10.2.202.124",
            "public_dns": "ec2-54-214-86-251.compute-1.amazonaws.com",
            "public_ip": "54.214.86.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0e89e6b300ad16547",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "nginx-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-e6e12e6deeac8a5a0",
            "tags": {
              "Name": "nginx-server"
            },
            "tags_all": {
              "Name": "nginx-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-259763ac93736dce4"
            ]
          },
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.web",
            "tls_private_key.key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-259763ac93736dce4",
            "description": "Allow web and SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-259763ac93736dce4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "nginx-sg"
            },
            "tags_all": {
              "Name": "nginx-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-593e59da29c1c88de"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-5f4a2c94a78f00cce",
            "description": "Allow HTTP traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-5f4a2c94a78f00cce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg-http",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-593e59da29c1c88de"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}